# C-

./: .611.cpp.swp  .clang-format  CMakeLists.txt  main.cpp
.cache/clangd/index/: 7.13test.cpp.DC3D51012F3081EC.idx  8.8.cpp.52F5103901A038D6.idx  9test.cpp.1DF9CA28D7A46F4B.idx  golf.cpp.10CA0717A72E65C9.idx  golf.h.AB3F1AF0D48F1CF7.idx  main.cpp.D1EAB1DFF73F1017.idx  namesp.cpp.F85F7A325ECB43E3.idx  namesp.h.1A9EB00435DBFAD2.idx  sales.cpp.FFC4BC608DC3CC57.idx  sales.h.1DF5AB8850BAB44F.idx
